<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".BrowseAddressesActivity">

        <LinearLayout
            android:id="@+id/linearLayout2"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_new_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:onClick="addNewAddress"
                    android:text="@string/add_new_address"/>

                <Button
                    android:id="@+id/delete_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:onClick="deleteAddress"
                    android:text="@string/delete_address"/>

                <Button
                    android:id="@+id/old_protocols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:onClick="showOldProtocols"
                    android:text="@string/show_old_protocols"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <!--usuń adresy-->
                <Button
                    android:id="@+id/detele_all_addresses_button"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:onClick="deleteAllAddresses"
                    android:text="@string/delete_all_addresses_button"/>

                <Button
                    android:id="@+id/synchronize_all_protocols_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/synchronize_protocols" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="generateDailyReportSiemianowice"
                    android:text="@string/generate_daily_report_siemanowice"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="generateDailyReportNewPaderewskiego"
                    android:text="@string/generate_daily_report_nowy_paderewskiego"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>


            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="znajdź adres"/>

            <LinearLayout android:id="@+id/list_wrapper"
                          xmlns:android="http://schemas.android.com/apk/res/android"
                          xmlns:tools="http://schemas.android.com/tools"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center_horizontal"
                          android:orientation="horizontal">

                <ListView
                    android:id="@+id/addresses_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.wruzjan.ihg.utils.view.ProgressLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>